<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvCalcResult"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="16dp"
        android:gravity="bottom|right"
        android:text="@string/tv_calc_result"
        android:textSize="76sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnAllClear"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="24dp"
        android:text="@string/btn_all_clear"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/btnSign"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCalcResult" />

    <Button
        android:id="@+id/btnSign"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="24dp"
        android:text="@string/btn_change_sign"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/btnPercent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnAllClear"
        app:layout_constraintTop_toBottomOf="@+id/tvCalcResult" />

    <Button
        android:id="@+id/btnPercent"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="24dp"
        android:text="@string/btn_percent"
        android:textSize="34sp"
        app:layout_constraintEnd_toStartOf="@+id/btnDivision"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnSign"
        app:layout_constraintTop_toBottomOf="@+id/tvCalcResult" />

    <Button
        android:id="@+id/btnDivision"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="24dp"
        android:text="@string/btn_division"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnPercent"
        app:layout_constraintTop_toBottomOf="@+id/tvCalcResult" />

    <Button
        android:id="@+id/btnSeven"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"
        android:text="@string/btn_seven"
        android:textSize="34sp"
        app:layout_constraintEnd_toStartOf="@+id/btnEight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAllClear" />

    <Button
        android:id="@+id/btnEight"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"
        android:text="@string/btn_eight"
        android:textSize="34sp"
        app:layout_constraintEnd_toStartOf="@+id/btnNine"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnSeven"
        app:layout_constraintTop_toBottomOf="@+id/btnSign" />

    <Button
        android:id="@+id/btnNine"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"
        android:text="@string/btn_nine"
        android:textSize="34sp"
        app:layout_constraintEnd_toStartOf="@+id/btnMulti"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnEight"
        app:layout_constraintTop_toBottomOf="@+id/btnPercent" />

    <Button
        android:id="@+id/btnMulti"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"
        android:text="@string/btn_multi"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnNine"
        app:layout_constraintTop_toBottomOf="@+id/btnDivision" />

    <Button
        android:id="@+id/btnFour"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"
        android:text="@string/btn_four"
        android:textSize="34sp"
        app:layout_constraintEnd_toStartOf="@+id/btnFive"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSeven" />

    <Button
        android:id="@+id/btnFive"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"
        android:text="@string/btn_five"
        android:textSize="34sp"
        app:layout_constraintEnd_toStartOf="@+id/btnSix"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnFour"
        app:layout_constraintTop_toBottomOf="@+id/btnEight" />

    <Button
        android:id="@+id/btnSix"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"
        android:text="@string/btn_six"
        android:textSize="34sp"
        app:layout_constraintEnd_toStartOf="@+id/btnMinus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnFive"
        app:layout_constraintTop_toBottomOf="@+id/btnNine" />

    <Button
        android:id="@+id/btnMinus"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"
        android:text="@string/btn_minus"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnSix"
        app:layout_constraintTop_toBottomOf="@+id/btnMulti" />

    <Button
        android:id="@+id/btnOne"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"
        android:text="@string/btn_one"
        android:textSize="34sp"
        app:layout_constraintEnd_toStartOf="@+id/btnTwo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFour" />

    <Button
        android:id="@+id/btnTwo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"
        android:text="@string/btn_two"
        android:textSize="34sp"
        app:layout_constraintEnd_toStartOf="@+id/btnThree"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnOne"
        app:layout_constraintTop_toBottomOf="@+id/btnFive" />

    <Button
        android:id="@+id/btnThree"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"
        android:text="@string/btn_three"
        android:textSize="34sp"
        app:layout_constraintEnd_toStartOf="@+id/btnPlus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnTwo"
        app:layout_constraintTop_toBottomOf="@+id/btnSix" />

    <Button
        android:id="@+id/btnPlus"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"
        android:text="@string/btn_plus"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnThree"
        app:layout_constraintTop_toBottomOf="@+id/btnMinus" />

    <Button
        android:id="@+id/btnDot"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"
        android:text="@string/btn_dot"
        android:textSize="34sp"
        app:layout_constraintEnd_toStartOf="@+id/btnEquals"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnZero"
        app:layout_constraintTop_toBottomOf="@+id/btnThree" />

    <Button
        android:id="@+id/btnZero"
        android:layout_width="176dp"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"
        android:gravity="center|left"
        android:text="@string/btn_zero"
        android:textSize="34sp"
        app:layout_constraintEnd_toStartOf="@+id/btnDot"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnOne" />

    <Button
        android:id="@+id/btnEquals"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"
        android:text="@string/btn_equals"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnDot"
        app:layout_constraintTop_toBottomOf="@+id/btnPlus" />
</androidx.constraintlayout.widget.ConstraintLayout>